--- a/src/styles.css
+++ b/src/styles.css
@@ -20,10 +20,15 @@ body {
 
 .select {
   width: 200px;
-  background-color: white;
+  background-color: red;
 }
 
 .mat-select-panel {
   background-color: red;
-  width: 1000px;
+  width: 200px;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
 }
