--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,25 +1,21 @@
 <h1>Written by: {{name}}</h1>>
-
+<div>
     <label>To Do: </label>
-        <input [(ngModel)]="todo"  type="text" >
-        <button mat-raised-button  (click)="onClick()">Submit To Do </button> <br>
-<br>
+        <input [(ngModel)]="todo"  type="text" > 
+        
+        <button mat-raised-button  (click)="onClick()"><fa-icon [icon]="faPlus"></fa-icon> </button>
 
-<button mat-raised-button (click)="showComplete()">Show Complete Tasks</button>
-<button mat-raised-button (click)="showIncomplete()">Show Incomplete Tasks</button>
-<button mat-raised-button (click)="showAll()">Show All Tasks</button><br>
-
-<h1>{{displayStatus}} Items</h1>
-<div *ngFor="let item of filteredList; let i = index">{{item.toDo}} {{item.complete}} 
-    <button mat-raised-button  (click)="markIncomplete(item)"> Mark Incomplete</button>
-    <button mat-raised-button (click)="markComplete(item)"> Mark Complete</button>
-    <button mat-raised-button  (click)="deleteItem(item)">Delete</button></div>
 <mat-form-field appearance="fill" class='select'>
-    <label>Task View
-    </label>
-    <mat-select disableOptionCentering panelClass="myPanelClass" #t (selectionChange)="onChange(t.value)">
-        <mat-option *ngFor="let display of addValueList" [value] = "display.value">
+    <mat-select disableOptionCentering panelClass="myPanelClass" #s (selectionChange)="onDisplayChange(s.value)">
+        <mat-option *ngFor="let display of displayList" [value] = "display.value">
             {{display.display}}
         </mat-option>
     </mat-select>
 </mat-form-field>
+
+
+</div>
+<div *ngFor="let item of filteredList; let i = index">{{item.toDo}} {{item.complete}} 
+    <button class="button" mat-raised-button  (click)="markIncomplete(item)"> Mark Incomplete</button>
+    <button mat-raised-button (click)="markComplete(item)"> Mark Complete</button>
+    <button mat-raised-button  (click)="deleteItem(item)">Delete</button></div>
