--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -2,3 +2,25 @@
   background-color: pink;
   font-size: 1.5em;
 }
+
+.cards {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.form-container {
+  display: flex;
+  padding-right: 10px;
+  gap: 10px;
+}
+
+.title {
+  padding-left: 130px;
+  padding-top: 100px;
+  padding-bottom: 40px;
+  font-size: 30px;
+}
+
+.button {
+  height: 50px;
+}
